[package]
name = "flag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
futures-util = "0.3.26"
log = { version = "0.4", features = ["std", "serde"] }
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = {version = "1.25.0", features = ["full"]}
